Bug 463599 - No way to scroll color history on Android
Summary: No way to scroll color history on Android
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 5.1.4
Platform: Android Android 13.x
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-29 19:41 UTC by YetAnotherKritaUser
Modified: 2023-02-14 12:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Where is scroll bar? (147.85 KB, image/jpeg)
2022-12-29 19:41 UTC, YetAnotherKritaUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description YetAnotherKritaUser 2022-12-29 19:41:03 UTC
Created attachment 154886 [details]
Where is scroll bar?

SUMMARY
Settings for Advanced Color Selector says, "Allow Scrolling" but no scrolling happens when needed.

Sh-zam said:
The scrolling of the patches unfortunately is done manually, so this needs to be changed to a scroller widget, so we can add kinetic scrolling to this.

STEPS TO REPRODUCE
1. Choose more than 12 colors (more than number of colors set.)
2. On color swatches, try to get to 1st color used.
3. 

OBSERVED RESULT
Can't scroll to get at 1st color used

EXPECTED RESULT
Ability to scroll down to 1st colors used so that they can be used again.


SOFTWARE/OS VERSIONS
Krita 5.1.4 on Android 13
Qt Version: 

ADDITIONAL INFORMATION
@sh-zam said to post this.
Comment 1 Halla Rempt 2023-01-04 10:43:48 UTC
There isn't really place for a scrollbar next to the color history, so we should introduce arrow buttons on top and bottom or at the sides. Scrolling is activated on systems that have a facility to scroll with the mouse, like a scroll wheel or a touchpad scroll gesture. I don't know whether Android has a gesture like that?
Comment 2 Bug Janitor Service 2023-01-25 10:00:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1723
Comment 3 Dmitry Kazakov 2023-02-14 12:13:51 UTC
Git commit d25ab3702bf23c629edb1ec80dcf8b664c686fea by Dmitry Kazakov, on behalf of Sharaf Zaman.
Committed on 14/02/2023 at 12:13.
Pushed by dkazakov into branch 'master'.

Make KisColorPatches use Model-View architecture for rendering color patches

There is one known bug that is present in the code which I couldn't figure out, when you first open Krita the Common colors widget responds to Kinetic scrolling in the direction it shouldn't be responding. For example if it is set to horizontal, then it will respond to scrolling in vertical direction. But if you change the direction or change the count of rows/columns, then things work like they should. I couldn't figure  out why this is happening,  something is changing headerLength when the widget is first opened but if you resize it, it snaps back to what it should be (which to me looks like a qt bug). 

M  +1    -0    libs/libqml/plugins/kritasketchplugin/CMakeLists.txt
M  +1    -0    plugins/dockers/advancedcolorselector/CMakeLists.txt
A  +299  -0    plugins/dockers/advancedcolorselector/KisColorPatchesTableView.cpp     [License: LGPL(v2.0+)]
A  +54   -0    plugins/dockers/advancedcolorselector/KisColorPatchesTableView.h     [License: LGPL(v2.0+)]
M  +2    -12   plugins/dockers/advancedcolorselector/kis_color_history.cpp
M  +0    -1    plugins/dockers/advancedcolorselector/kis_color_history.h
M  +67   -251  plugins/dockers/advancedcolorselector/kis_color_patches.cpp
M  +11   -34   plugins/dockers/advancedcolorselector/kis_color_patches.h
M  +2    -2    plugins/dockers/advancedcolorselector/kis_common_colors.cpp

https://invent.kde.org/graphics/krita/commit/d25ab3702bf23c629edb1ec80dcf8b664c686fea